image added and mathjax

--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -5,7 +5,12 @@ date: 2024-08-10
 
 Renowned for his mastery over the concept of infinity, Borges seamlessly weaves it into various tales, be it the infinite library in "The Library of Babel" (coming soon an article about this one) or the profound notion of "The Aleph," a singular point from which the entirety of space unfolds. However, our focus in this article shifts to a narrative that navigates the expanses of infinity on a distinct scale: exploring the boundless labyrinths of memory and delving into the repercussions of possessing an unlimited reservoir of recollections.
 
-![Borges](/assets/images/funes.png)
+<p align="center">
+  <img src="/assets/images/funes.png" alt="Funes">
+</p>
+
+
+
 
 Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability - or perhaps, a curse - that grants him the capacity to remember every single detail with impeccable clarity.
 
