--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -3,22 +3,31 @@ title: "Borges, Memory and Machine Learning"
 date: 2024-08-10
 ---
 
-Renowned for his mastery over the concept of infinity, Borges seamlessly weaves it into various tales, be it the infinite library in "The Library of Babel" (coming soon an article about this one) or the profound notion of "The Aleph," a singular point from which the entirety of space unfolds. However, our focus in this article shifts to a narrative that navigates the expanses of infinity on a distinct scale: exploring the boundless labyrinths of memory and delving into the repercussions of possessing an unlimited reservoir of recollections.
+During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting Borges and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
 
-<p align="center">
+I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
+
+
+
+
+
+
+
+<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/funes.png" alt="Funes" style="max-width: 100%; height: auto;">
-</p>
+</div>
 
 
 
 
-Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability - or perhaps, a curse - that grants him the capacity to remember every single detail with impeccable clarity.
 
-Borges, not tethered to scientific expertise, wonders about the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppresive.
+
 
 ## Funes the Memorious
 
 Let's begin with a brief overview of the narrative. Nevertheless, I urge you to immerse yourself in the story directly - it spans less than 10 pages - since any summary will inevitably fall short in capturing the full depth and magnitude of Borges's work. Additionally, I'll be incorporating several direct quotes from the story, as I think there's no better way to convey the intricacies of the discussed concepts than through Borges' own words.
+
+Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability - or perhaps, a curse - that grants him the capacity to remember every single detail with impeccable clarity. The argument is simple, but the real genius of Borges is that he explores the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppressive. As we will see, Borges, without any formal knowledge of neuroscience, intuitively predicts the potential repercussions of such an ability with striking accuracy.
 
 The author describes Funes' talent in the following way:
 
@@ -34,7 +43,7 @@ Finally, Borges concludes the narrative with a succinct yet profound observation
 
 > With no effort, he had learned English, French, Portuguese and Latin. I suspect, however, that he was not very capable of thought. To think is to forget differences, generalize, make abstractions. In the teeming world of Funes, there were only details, almost immediate in their presence.
 
-Through this narrative, Borges explores the very essence of thought, learning, and their intricate connection with memory within the realms of fiction. However, this fictional exploration was not as distant from reality as one might have initially perceived…
+In short, Borges starts with a simple premise: *the life of a man who can remember everything* and arrives at a profound conclusion: *To think, we must forget*.
 
 ## Back to reality
 
