--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -3,23 +3,13 @@ title: "Borges, Memory and Machine Learning"
 date: 2024-08-10
 ---
 
-During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting Borges and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
-
-I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
-
-
-
-
-
-
-
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/funes.png" alt="Funes" style="max-width: 100%; height: auto;">
 </div>
 
+During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting Borges and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
 
-
-
+I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
 
 
 
@@ -47,40 +37,37 @@ In short, Borges starts with a simple premise: *the life of a man who can rememb
 
 ## Back to reality
 
-The subsequent section, delving into neuroscience, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
+The subsequent section, now exploring neuroscience and real experiments, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
 
-Solomon Shereshevskii, a journalist at a Moscow newspaper renowned for his extraordinary memory, embarked on a remarkable research journey after a co-worker suggested he consult with psychologist Alexander Romanovich Luria. In their initial meeting, Shereshevskii astonished Luria with his prodigious memory, effortlessly reproducing sequences of up to 70 random letters or numbers. Moreover he was able to recite the sequences backwards, irrespective of whether they consisted of sounds, numbers, or words - Shershevskii simply visualized them in his memory and could effortlessly recall them.
+Solomon Shereshevskii, a journalist at a Moscow newspaper renowned for his extraordinary memory, started a remarkable research journey after a co-worker suggested he consult with psychologist Alexander Romanovich Luria. In their initial meeting, Shereshevskii astonished Luria with his prodigious memory, effortlessly reproducing sequences of up to 70 random letters or numbers. Moreover he was able to recite the sequences backwards, irrespective of whether they consisted of sounds, numbers, or words - Shershevskii simply visualized them in his memory and could effortlessly recall them.
 
-On another day, Luria asked him to recall a random mathematical formula:
+On another experiment, Luria asked him to recall a random mathematical formula:
 
 $$ N * \sqrt{d^2 * \frac{85}{vx}} * \sqrt[3]{\frac{267^2 * 86x}{n^2v * \pi264}}n^2b = sv\frac{1624}{32^2} $$
 
 Not only did he repeat the formula without error, but he was able to reconstruct it 15 years later (not knowing that Luria would ask him again).
 
-Shereshevskii's extraordinary memory was based on a strong synaesthesia. That is, mixing the perceptions of different senses; for example, associating numbers with colours. This can be seen by reading the notes that Luria took of his conversations.
+Shereshevskii's extraordinary memory was based on a strong synaesthesia. That is, mixing the perceptions of different senses; for example, associating numbers with colours. This can be seen by reading the notes that Luria took of his conversations:
 
 > I recognise a word not only by the images it evokes, but also by a whole complex of sensations that the image triggers. It's difficult to explain…, it's not a question of vision or hearing, it's a general sense I have. I usually feel the taste and the weight of a word and I don't need to make an effort to remember it: it seems that the word appears by itself.
 
-Finally, after Luria's failure to measure Shereshevskii's memory capacity, he investigated another possibility: Was Shereshevskii capable of forgetting?
+Finally, after Luria's failure to measure Shereshevskii's memory total capacity, he investigated another possibility, very aligned with Borges's intuition: Was Shereshevskii capable of forgetting?
 
-Basically, forgetting was a task of Herculean proportions for him. As a consequence, Shereshevskii encountered considerable challenges in abstract thinking and reading comprehension. Despite his capacity to memorize entire pages of a book, he grappled with isolating the content to grasp its underlying meaning. Unlike the typical process where individuals extract and remember key facts to follow a narrative, Shereshevskii found himself inundated with a miriad of associations after reading just four lines.
+It resulted that forgetting was a task of Herculean proportions for him. As a consequence, Shereshevskii encountered considerable challenges in abstract thinking and reading comprehension. Despite his capacity to memorize entire pages of a book, he struggled with isolating the content to grasp its underlying meaning. Unlike the typical process where individuals extract and remember key facts to follow a narrative, Shereshevskii found himself inundated with a miriad of associations after reading just four lines.
 
-As he describes himself below, he also had great trouble recognising voices and faces.
+As he describes himself below, he also had great trouble recognising voices and faces, another symptom of his inability to abstract concepts and one of the curses of his condition.
 
 > I became so interested in his voice [referring to the voice of filmmaker Sergei Eisenstein] that I couldn't follow what he was saying…. But there are people whose voices are constantly changing. I often have trouble recognising someone's voice on the phone, and it's not because of a bad connection. It's because the person is someone who changes their voice twenty or thirty times during the course of a day. People don't notice this, but I do.
 A person's expression depends on their mood and the circumstances in which they find themselves. People's faces are constantly changing; it is these different forms of expression that confuse me and make it so difficult to remember faces.
 
-Following this examination, noticeable parallels emerge between Shereshevskii and Funes.
+Following this examination, fascinating parallels emerge between Shereshevskii and Funes. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
-## Experimental pause
-
-Pause for a moment before proceeding, and reflect on a past experience. Visualize it in your mind, delving into the details as thoroughly as possible. After you believe you've captured it, challenge yourself to uncover one additional detail. Isn't it quite challenging?
-Nature has a way of causing us to forget a considerable portion of our memories. As exemplified by the case of Shereshevski, it appears that maintaining a balance between remembering and forgetting is crucial to fostering comprehension.
 
 ## Concept cells and hippocampus
 
-The previous idea can be formalised a little more: In order to think, we need to abstract concepts and relate them. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
+As Borger suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
 This lead us to a very intriguing and relevant discovery done by Quiroga again [2][3]. He discovered that the brain has multimodal neurons. These neurons react to groups of abstract ideas linked by a main theme, rather than specific visual details. Quiroga called them "concept cells".
+
 Concept cells are located in the hippocampal region of the brain and they fire when a meaningful concept to the individual is presented. This discovery was made by studying the neurons of epileptic patients. Researchers used intracranial electrodes to observe the neurons' reactions when the patients were shown various concept images in different formats.
 
 
