--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -63,18 +63,23 @@ A person's expression depends on their mood and the circumstances in which they 
 Following this examination, fascinating parallels emerge between Shereshevskii and Funes. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
 
-## Concept cells and hippocampus
+## Hippocampus and concept cells
 
 As Borger suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
-This lead us to a very intriguing and relevant discovery done by Quiroga again [2][3]. He discovered that the brain has multimodal neurons. These neurons react to groups of abstract ideas linked by a main theme, rather than specific visual details. Quiroga called them "concept cells".
 
-Concept cells are located in the hippocampal region of the brain and they fire when a meaningful concept to the individual is presented. This discovery was made by studying the neurons of epileptic patients. Researchers used intracranial electrodes to observe the neurons' reactions when the patients were shown various concept images in different formats.
+This lead us to a very intriguing and relevant discovery done by Quiroga [3]. He found that the brain contains a subset of multimodal neurons, which respond to clusters of abstract concepts centered around a common, high-level theme rather than specific visual features. This discovery originated from studies on epileptic patients, where researchers used intracranial electrodes to observe how neurons reacted to different conceptual images presented in various formats. For instance, in the image below, we see a neuron in the entorhinal cortex, the primary interface between the hippocampus and the neocortex, that fires only when the patient is presented with the **concept** of "Luke Skywalker." This response occurs regardless of whether the concept is conveyed through an image, text, or audio. Interestingly, the same neuron also fires in response to the concept of Yoda.
+
+<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
+</div>
+
+Later, in his opinion paper Quiroga called them "concept cells" [3]. Concept cells are located in the hippocampal region of the brain and they fire when a meaningful concept to the individual is presented. 
 
 
 ## References
 
 [1] Quiroga, R. Q. (2012). Borges and memory: Encounters with the human brain. Mit Press.
 
-[2] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
+[2] Quiroga, R. Q., Reddy, L., Kreiman, G., Koch, C., & Fried, I. (2005). Invariant visual representation by single neurons in the human brain. Nature, 435(7045), 1102–1107.
 
-[3] Quiroga, R. Q., Reddy, L., Kreiman, G., Koch, C., & Fried, I. (2005). Invariant visual representation by single neurons in the human brain. Nature, 435(7045), 1102–1107.
+[3] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
