new images and section

--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -35,7 +35,7 @@ Finally, Borges concludes the narrative with a succinct yet profound observation
 
 In short, Borges starts with a simple premise: *the life of a man who can remember everything* and arrives at a profound conclusion: *To think, we must forget*.
 
-## Back to reality
+## Funes in real life
 
 The subsequent section, now exploring neuroscience and real experiments, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
 
@@ -62,6 +62,10 @@ A person's expression depends on their mood and the circumstances in which they 
 
 Following this examination, fascinating parallels emerge between Shereshevskii and Funes. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
+## Henry Molaison or the Anti-Funes
+
+
+
 
 ## Hippocampus and concept cells
 
@@ -69,11 +73,32 @@ As Borger suggest, in order to think, we need to abstract concepts and relate th
 
 This lead us to a very intriguing and relevant discovery done by Quiroga [3]. He found that the brain contains a subset of multimodal neurons, which respond to clusters of abstract concepts centered around a common, high-level theme rather than specific visual features. This discovery originated from studies on epileptic patients, where researchers used intracranial electrodes to observe how neurons reacted to different conceptual images presented in various formats. For instance, in the image below, we see a neuron in the entorhinal cortex, the primary interface between the hippocampus and the neocortex, that fires only when the patient is presented with the **concept** of "Luke Skywalker." This response occurs regardless of whether the concept is conveyed through an image, text, or audio. Interestingly, the same neuron also fires in response to the concept of Yoda.
 
+Later, in his opinion paper Quiroga called them "concept cells" or "concept neurons" [4]. 
+
+
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
 </div>
 
-Later, in his opinion paper Quiroga called them "concept cells" [3]. Concept cells are located in the hippocampal region of the brain and they fire when a meaningful concept to the individual is presented. 
+This demonstrates that the concept neurons in the hippocampus (and surrounding areas) encode representations at such a high level of abstraction that they can be triggered by different types of stimuli. Furthermore, Quiroga showed that these abstract representations can form rapidly. In one experiment, he and his team presented photos and text of themselves to patients who had only known them for two days. Remarkably, the patients already had neurons that fired in response to their photos and names.
+
+Nevertheless, using a single neuron to encode each concept would be inefficient and would fail to capture the relationships between concepts. Instead, as Quiroga suggests in his opinion paper, overlapping representations may be key to learning associations.
+
+Imagine a cell assembly - a group of neurons - that encodes the concept of 'Luke Skywalker'. Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the 'Luke Skywalker cell assembly' is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts.
+These partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories.
+
+<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
+</div>
+
+In short, the same neuron can fire for different but related concepts (like Luke Skywalker and Yoda), and there are very few of these neurons, each responding to only a few specific concepts. This is called a sparse representation, and it is also widely used in machine learning, for example in sparse autoencoders that encode information using sparse vectors [3] (vectors where most values are 0 and only a few have non-zero values).
+
+When you see a photo of Luke Skywalker in a magazine, the initial visual recognition occurs in the inferior temporal gyrus; you don't need the Luke Skywalker concept neuron for this. However, this concept neuron is crucial for transforming that visual perception into a memory, allowing you to later recall seeing Luke Skywalker's photo in the magazine. These concept neurons represent the abstract concepts we use to form and store memories. Their role in memory formation makes sense because we typically remember general concepts (people, events, places) rather than exact details.
+
+But this post is about Funes, memory and machine learning, right? So how does all this information connect to Funes?
+
+Funes represents the extreme example of a person without the ability to abstract. Quiroga hypothesizes that without concept neurons, we would be like Funes, unable to abstract or categorize, only capable of remembering precise, uncompressed details of everything we experience, but paradoxically unable to truly think. This highlights a fundamental insight: thinking is the process of abstracting, associating concepts, and creating relationships between them. These conceptual associations then help strengthen our memories and allow us to recall them later.
+
 
 
 ## References
@@ -82,4 +107,6 @@ Later, in his opinion paper Quiroga called them "concept cells" [3]. Concept cel
 
 [2] Quiroga, R. Q., Reddy, L., Kreiman, G., Koch, C., & Fried, I. (2005). Invariant visual representation by single neurons in the human brain. Nature, 435(7045), 1102–1107.
 
-[3] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
+[3] Ng, A. (2011). Sparse autoencoder. CS294A Lecture notes, 72(2011), 1-19.
+
+[4] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
