--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -7,6 +7,10 @@ date: 2024-08-10
   <img src="/assets/images/funes.png" alt="Funes" style="max-width: 100%; height: auto;">
 </div>
 
+
+
+
+
 During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting Borges and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
 
 I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
@@ -60,7 +64,7 @@ As he describes himself below, he also had great trouble recognising voices and 
 > I became so interested in his voice [referring to the voice of filmmaker Sergei Eisenstein] that I couldn't follow what he was saying…. But there are people whose voices are constantly changing. I often have trouble recognising someone's voice on the phone, and it's not because of a bad connection. It's because the person is someone who changes their voice twenty or thirty times during the course of a day. People don't notice this, but I do.
 A person's expression depends on their mood and the circumstances in which they find themselves. People's faces are constantly changing; it is these different forms of expression that confuse me and make it so difficult to remember faces.
 
-Following this examination, fascinating parallels emerge between Shereshevskii and Funes. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
+Following this examination, fascinating parallels emerge between Shereshevskii and Funes. Actually, it is surprising how well Borges predicted the impact that an enormous memory capacity could have on a human being, relying purely on intuition. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
 ## Henry Molaison or the Anti-Funes
 
@@ -99,7 +103,7 @@ This demonstrates that the concept neurons in the hippocampus (and surrounding a
 
 Nevertheless, using a single neuron to encode each concept would be inefficient and would fail to capture the relationships between concepts. Instead, as Quiroga suggests in his opinion paper, overlapping representations may be key to learning associations.
 
-Imagine a cell assembly - a group of neurons - that encodes the concept of 'Luke Skywalker'. Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the 'Luke Skywalker cell assembly' is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts.
+Imagine a cell assembly, a group of neurons, that encodes the concept of 'Luke Skywalker'. Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the 'Luke Skywalker cell assembly' is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts.
 These partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories.
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
@@ -114,6 +118,19 @@ But this post is about Funes, memory and machine learning, right? So how does al
 
 Funes represents the extreme example of a person without the ability to abstract. Quiroga hypothesizes that without concept neurons, we would be like Funes, unable to abstract or categorize, only capable of remembering precise, uncompressed details of everything we experience, but paradoxically unable to truly think. This highlights a fundamental insight: thinking is the process of abstracting, associating concepts, and creating relationships between them. These conceptual associations then help strengthen our memories and allow us to recall them later.
 
+## Concepts in Machine Learning
+
+Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called "Multimodal neurons in artificial neural networks" and is from OpenAI, in particular from intepretability researches I really admire such as Chris Olah (he has a fantastic blog in which you can learn a lot about machine learning: [Link](https://colah.github.io/))
+
+Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
+
+But how do they analyze CLIP's individual neurons? They use two main approaches to understand what individual neurons are actually doing, like a neuroscientist like Quiroga, using different tests to understand brain function.
+
+The first method, feature visualization, employs gradient ascent optimization to synthesize input patterns that maximally activate specific neurons. Beginning with random initialization, the algorithm iteratively refines the input until it discovers the optimal stimuli for each neuron. More intuitively, they start with random noise and gradually adjust it until the neuron gets really excited, kind of like playing a game of "warmer/colder" but letting the neuron itself tell you what makes it fire most strongly. The resulting images, while often abstract, reveal fascinating patterns about what each neuron has learned to detect. These synthesized patterns, while abstract, provide direct evidence of the features and concepts each neuron has learned to detect during training.
+
+The second approach is more straightforward: researchers feed a huge collection of real images through CLIP and keep track of which images make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge. What's particularly interesting about CLIP is that its neurons often turn out to be "multi-faceted" - meaning a single neuron might respond strongly to both photographs and drawings of the same concept, or even to written words describing that concept. For example, a single neuron might light up for photos of dogs, cartoon dogs, and even the word "dog" - suggesting it's learned to recognize the concept of "dog" across different forms of representation.
+
+This two-pronged approach has revealed that most neurons in CLIP are surprisingly interpretable, giving us valuable insights into how the model connects the worlds of images and language. It's like discovering that what initially looked like a black box is actually filled with specialized workers, each doing a specific but flexible job in bridging the gap between visual and textual understanding.
 
 
 ## References
@@ -125,3 +142,5 @@ Funes represents the extreme example of a person without the ability to abstract
 [3] Ng, A. (2011). Sparse autoencoder. CS294A Lecture notes, 72(2011), 1-19.
 
 [4] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
+
+[5] Radford, A., Kim, J. W., Hallacy, C., Ramesh, A., Goh, G., Agarwal, S., ... & Sutskever, I. (2021, July). Learning transferable visual models from natural language supervision. In International conference on machine learning (pp. 8748-8763). PMLR.
