--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -86,6 +86,8 @@ He described his life as constantly "waking up from a dream." There's a curious 
 
 Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for later storage.
 
+(![Henry Molaison brain](https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png))
+
 ## Hippocampus and Concept Cells
 
 As Borger suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
@@ -126,9 +128,15 @@ Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] c
 
 But how do they analyze CLIP's individual neurons? They use two main approaches to understand what individual neurons are actually doing, like a neuroscientist like Quiroga, using different tests to understand brain function.
 
-The first method, feature visualization, employs gradient ascent optimization to synthesize input patterns that maximally activate specific neurons. Beginning with random initialization, the algorithm iteratively refines the input until it discovers the optimal stimuli for each neuron. More intuitively, they start with random noise and gradually adjust it until the neuron gets really excited, kind of like playing a game of "warmer/colder" but letting the neuron itself tell you what makes it fire most strongly. The resulting images, while often abstract, reveal fascinating patterns about what each neuron has learned to detect. These synthesized patterns, while abstract, provide direct evidence of the features and concepts each neuron has learned to detect during training.
+The first method, feature visualization, generates images by using gradient ascent optimization to find input patterns that maximally activate specific neurons. Starting with random noise, the algorithm gradually tweaks and refines the pixels until it creates an image that strongly excites the target neuron, similar to playing a game of "warmer/colder" where each adjustment is guided by how strongly the neuron responds. The resulting generated images, while often abstract, provide direct evidence of the features and patterns each neuron has learned to detect during training. I strongly recommend reading (again) Chris Olah's brilliant post on Inceptionism ([Link](https://research.google/blog/inceptionism-going-deeper-into-neural-networks/)). It provides a clear overview while showcasing the beauty of this concept and of neural networks in general.
 
-The second approach is more straightforward: researchers feed a huge collection of real images through CLIP and keep track of which images make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge. What's particularly interesting about CLIP is that its neurons often turn out to be "multi-faceted" - meaning a single neuron might respond strongly to both photographs and drawings of the same concept, or even to written words describing that concept. For example, a single neuron might light up for photos of dogs, cartoon dogs, and even the word "dog" - suggesting it's learned to recognize the concept of "dog" across different forms of representation.
+The second approach is more straightforward: researchers feed dataset examples through CLIP and keep track of which examples make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge.
+
+<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/paper-example.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
+</div>
+
+What's particularly interesting about CLIP is that its neurons often turn out to be "multi-faceted" - meaning a single neuron might respond strongly to both photographs and drawings of the same concept, or even to written words describing that concept. For example, a single neuron might light up for photos of dogs, cartoon dogs, and even the word "dog" - suggesting it's learned to recognize the concept of "dog" across different forms of representation.
 
 This two-pronged approach has revealed that most neurons in CLIP are surprisingly interpretable, giving us valuable insights into how the model connects the worlds of images and language. It's like discovering that what initially looked like a black box is actually filled with specialized workers, each doing a specific but flexible job in bridging the gap between visual and textual understanding.
 
