--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -86,7 +86,9 @@ He described his life as constantly "waking up from a dream." There's a curious 
 
 Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for later storage.
 
-(![Henry Molaison brain](https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png))
+<p align="center">
+  <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="Henry Molaison brain" width="400">
+</p>
 
 ## Hippocampus and Concept Cells
 
@@ -109,7 +111,7 @@ Imagine a cell assembly, a group of neurons, that encodes the concept of 'Luke S
 These partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories.
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
+  <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 70%; height: auto;">
 </div>
 
 In short, the same neuron can fire for different but related concepts (like Luke Skywalker and Yoda), and there are very few of these neurons, each responding to only a few specific concepts. This is called a sparse representation, and it is also widely used in machine learning, for example in sparse autoencoders that encode information using sparse vectors [3] (vectors where most values are 0 and only a few have non-zero values).
