--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -86,9 +86,9 @@ He described his life as constantly "waking up from a dream." There's a curious 
 
 Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for later storage.
 
-<p align="center">
-  <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="Henry Molaison brain" width="400">
-</p>
+<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+  <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="HMBrain" style="max-width: 70%; height: auto;">
+</div>
 
 ## Hippocampus and Concept Cells
 
@@ -135,7 +135,7 @@ The first method, feature visualization, generates images by using gradient asce
 The second approach is more straightforward: researchers feed dataset examples through CLIP and keep track of which examples make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge.
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/paper-example.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
+  <img src="/assets/images/paper-example_.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
 </div>
 
 What's particularly interesting about CLIP is that its neurons often turn out to be "multi-faceted" - meaning a single neuron might respond strongly to both photographs and drawings of the same concept, or even to written words describing that concept. For example, a single neuron might light up for photos of dogs, cartoon dogs, and even the word "dog" - suggesting it's learned to recognize the concept of "dog" across different forms of representation.
