--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -124,7 +124,7 @@ Funes represents the extreme example of a person without the ability to abstract
 
 ## Concepts in Machine Learning
 
-Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called "Multimodal neurons in artificial neural networks" and is from OpenAI, in particular from intepretability researches I really admire such as Chris Olah (he has a fantastic blog in which you can learn a lot about machine learning: [Link](https://colah.github.io/))
+Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://openai.com/index/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic blog in which you can learn a lot about machine learning: [Link](https://colah.github.io/))
 
 Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
 
